# micromux

./: .bumpversion.toml  .gitignore  .goreleaser.yaml  .ignore  .typos.toml  Cargo.toml  README.md  TODO.md  clippy.toml  micromux.schema.json  micromux.yaml  mise.toml  taskfile.yaml
.cargo/: config.toml
.github/workflows/: build.yaml  lint.yaml  release.yaml  test.yaml
crates/clippy-wrapper/: Cargo.toml  taskfile.yaml
crates/clippy-wrapper/src/: main.rs
crates/micromux/: Cargo.toml
crates/micromux-cli/: Cargo.toml
crates/micromux-cli/src/: control.rs  ctl.rs  logging.rs  main.rs  mcp.rs  options.rs
crates/micromux-control/: Cargo.toml
crates/micromux-control/src/: client.rs  endpoint.rs  lib.rs  protocol.rs  server.rs
crates/micromux-control/src/server/: unix.rs  unsupported.rs
crates/micromux-control/tests/: integration.rs
crates/micromux-mcp/: Cargo.toml
crates/micromux-mcp/src/: convert.rs  lib.rs  logproc.rs  select.rs
crates/micromux-screenshot/: Cargo.toml
crates/micromux-screenshot/src/: main.rs
crates/micromux-tui/: Cargo.toml
crates/micromux-tui/src/: event.rs  json_log.rs  lib.rs  reducer.rs  render.rs  state.rs  style.rs
crates/micromux/src/: bounded_log.rs  diagnostics.rs  env.rs  graph.rs  health_check.rs  lib.rs  main.rs  model.rs  scheduler.rs  service.rs  shutdown.rs  structured_log.rs
crates/micromux/src/config/: mod.rs  v1.rs
crates/micromux/src/scheduler/: control.rs  pty.rs  schedule.rs  types.rs
examples/demo/: micromux.yaml
plan/: mcp-agent-control.md
