[workspace]
resolver = "2"
members = [
	"crates/micromux",
	"crates/micromux-tui",
	"crates/micromux-cli",
]

[workspace.package]
edition = "2024"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
unreachable      = "deny"
unimplemented    = "deny"
todo             = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"
itertools = "0"
rand = "0"
indexmap = "2"
indoc = "2"
strum = { version = "0", features = ["derive"] }
enum-as-inner = "0"
parking_lot = "0"

# tracing
tracing = "0"

# diagnostics
codespan-reporting = "0"

# serde
serde = { version = "1", features = ["derive"] }

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
futures = "0"
