[workspace]
resolver = "2"
members = [
	"crates/clippy-wrapper",
	"crates/micromux",
	"crates/micromux-tui",
	"crates/micromux-cli",
]

[workspace.package]
version = "0.0.3"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Micromux is a local process supervisor with a terminal UI"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/micromux"
repository = "https://github.com/romnn/micromux"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
unreachable      = "deny"
unimplemented    = "deny"
todo             = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"
itertools = "0"
rand = "0"
indexmap = "2"
indoc = "2"
strum = { version = "0", features = ["derive"] }
parking_lot = "0"

# tracing
tracing = "0"

# diagnostics
codespan-reporting = "0"

# serde
serde = { version = "1", features = ["derive"] }

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
futures = "0"
