[workspace]
resolver = "2"
members = [
	"crates/clippy-wrapper",
	"crates/micromux",
	"crates/micromux-control",
	"crates/micromux-mcp",
	"crates/micromux-tui",
	"crates/micromux-cli",
	"crates/micromux-screenshot",
]
default-members = [
	"crates/micromux-cli",
]

[workspace.package]
version = "0.0.7"
edition = "2024"
authors = ["romnn <contact@romnn.com>"]
description = "Micromux is a local process supervisor with a terminal UI"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/romnn/micromux"
repository = "https://github.com/romnn/micromux"

[workspace.lints.rust]
warnings = { level = "warn", priority = -1 }
unsafe_code = "deny"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used      = "deny"
expect_used      = "deny"
panic            = "deny"
unreachable      = "deny"
unimplemented    = "deny"
todo             = "deny"
indexing_slicing = "deny"
missing_errors_doc = "warn"
await_holding_lock = "deny"

# Allowed
map_unwrap_or = "allow"
assigning_clones = "allow"
struct_excessive_bools = "allow"

[workspace.metadata.cargo-fc]
install_missing_targets = true
dedup = true
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-gnu",
	"aarch64-apple-darwin"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
color-eyre = "0"
thiserror = "2"
itertools = "0.15.0"
rand = "0"
indexmap = "2"
indoc = "2"
strum = { version = "0", features = ["derive"] }
parking_lot = "0"

# tracing
tracing = "0"

# diagnostics
codespan-reporting = "0"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0"
futures = "0"

# shared platform / process / terminal deps (features added per crate)
nix = "0.31.3"
portable-pty = "0.9"
directories = "6"
strip-ansi-escapes = "0.2"

# testing
similar-asserts = "2.0.0"
tempfile = "3"
