[package]
name = "micromux-cli"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "micromux"
path = "./src/main.rs"

[dependencies]
color-eyre.workspace = true

# logging
tracing.workspace = true
tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
tracing-appender = { version = "0" }

# colors and diagnostics
colored = "3"
termcolor = "1"
codespan-reporting.workspace = true

# micromux
micromux = { path = "../micromux/" }
micromux-tui = { path = "../micromux-tui/" }

# async runtime
tokio.workspace = true
futures.workspace = true

# parse cli arguments
clap = { version = "4", features = ["derive", "env"] }
