[package]
name = "micromux-cli"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/micromux-cli"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "terminal",
  "multiplexer",
  "tui",
]

[lints]
workspace = true

[[bin]]
name = "micromux"
path = "./src/main.rs"

[dependencies]
color-eyre.workspace = true

# logging
tracing.workspace = true
tracing-subscriber = { version = "0", features = ["json", "env-filter"] }
tracing-appender = { version = "0" }

# colors and diagnostics
termcolor = "1"
codespan-reporting.workspace = true

# micromux
micromux = { path = "../micromux/" }
micromux-tui = { path = "../micromux-tui/" }

# async runtime
tokio.workspace = true
futures.workspace = true

# parse cli arguments
clap = { version = "4", features = ["derive", "env"] }
