[package]
name = "micromux-control"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/micromux-control"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "terminal",
  "multiplexer",
  "tui",
]

[lints]
workspace = true

[dependencies]
micromux = { path = "../micromux/" }

# protocol
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# async runtime + framing
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
futures.workspace = true

# errors and tracing
thiserror.workspace = true
tracing.workspace = true

# runtime dir + ownership lock
directories.workspace = true
fs2 = "0.4"
sha2 = "0.11.0"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "user"] }

[dev-dependencies]
similar-asserts.workspace = true
color-eyre.workspace = true
tempfile.workspace = true
