[package]
name = "micromux-mcp"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/micromux-mcp"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "terminal",
  "multiplexer",
  "tui",
]

[lints]
workspace = true

[dependencies]
micromux = { path = "../micromux/" }
micromux-control = { path = "../micromux-control/" }

rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
schemars = "1"

serde.workspace = true
serde_json = "1"

tokio.workspace = true

[dev-dependencies]
similar-asserts.workspace = true
color-eyre.workspace = true
