[package]
name = "micromux-screenshot"
publish = false

version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Internal tool to capture micromux TUI screenshots for the docs (never published)"
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "micromux-screenshot"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
portable-pty = "0.9"
vt100 = "0"
