[package]
name = "micromux-tui"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
itertools.workspace = true
indexmap.workspace = true
strum.workspace = true

# tracing
tracing.workspace = true

# micromux
micromux = { path = "../micromux/" }

# tui
ratatui = { version = "0", features = [] }
ansi-to-tui = "8"
strip-ansi-escapes = "0"
crossterm = { version = "0.29", features = ["event-stream"] }

# async runtime
tokio.workspace = true
tokio-stream = "0"
futures.workspace = true
