[package]
name = "micromux-tui"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/micromux-tui"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "terminal",
  "multiplexer",
  "tui",
]

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
itertools.workspace = true
indexmap.workspace = true
strum.workspace = true

# tracing
tracing.workspace = true

# micromux
micromux = { path = "../micromux/" }

# tui
ratatui = { version = "0", features = [] }
ansi-to-tui = "8"
strip-ansi-escapes = "0"
crossterm = { version = "0.29", features = ["event-stream"] }

# async runtime
tokio.workspace = true
tokio-stream = "0"
futures.workspace = true

[dev-dependencies]
codespan-reporting.workspace = true
indoc.workspace = true
