[package]
name = "micromux"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
thiserror.workspace = true
strum.workspace = true
enum-as-inner.workspace = true
itertools.workspace = true
indexmap.workspace = true
parking_lot.workspace = true

# command and process management
async-process = "2"
shlex = "1"
nix = { version = "0", features = ["signal"] }
portable-pty = "0.9"

# graph
petgraph = "0"

# cross platform cache and config directories
directories = "6"

# config parsing
humantime = "2"
shellexpand = "3"

# tracing
tracing.workspace = true

# diagnostics
codespan-reporting.workspace = true
unindent = "0"

# async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# serialization
yaml-spanned = { git = "https://github.com/romnn/yaml-spanned.git" }
serde.workspace = true

[dev-dependencies]
indoc.workspace = true
jsonschema = "0"
serde_json = "1"
serde_yaml = "0"
