[package]
name = "micromux"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/micromux"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "terminal",
  "multiplexer",
  "tui",
]

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
thiserror.workspace = true
strum.workspace = true
itertools.workspace = true
indexmap.workspace = true
parking_lot.workspace = true

# command and process management
shlex = "1"
nix = { version = "0", features = ["signal"] }

# terminal emulation
alacritty_terminal = "0.25"
portable-pty = "0.9"

# graph
petgraph = "0"

# cross platform cache and config directories
directories = "6"

# config parsing
humantime = "2"
shellexpand = "3"

# tracing
tracing.workspace = true

# diagnostics
codespan-reporting.workspace = true
unindent = "0"

# async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# serialization
yaml-spanned = "0"
# yaml-spanned = { git = "https://github.com/romnn/yaml-spanned.git" }
serde.workspace = true

[dev-dependencies]
indoc.workspace = true
jsonschema = "0"
serde_json = "1"
serde_yaml = "0"
