[package]
name = "micromux"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/micromux"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "terminal",
  "multiplexer",
  "tui",
]

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true
thiserror.workspace = true
strum.workspace = true
itertools.workspace = true
indexmap.workspace = true
parking_lot.workspace = true

# command and process management
shlex = "2.0.1"
nix = { workspace = true, features = ["signal"] }
filedescriptor = "0.8.3"

# terminal emulation
alacritty_terminal = "0.26.0"
portable-pty.workspace = true

# graph
petgraph = "0"

# cross platform cache and config directories
directories.workspace = true

# config parsing
humantime = "2"
shellexpand = "3"

# tracing
tracing.workspace = true

# diagnostics
codespan-reporting.workspace = true
unindent = "0"

# async runtime
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true

# serialization
yaml-spanned = "0"
# yaml-spanned = { git = "https://github.com/romnn/yaml-spanned.git" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
indoc.workspace = true
jsonschema = "0"
serde_yaml = "0"
similar-asserts.workspace = true
